kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prishistorie-postgres
  namespace: prishistorie
spec:
  selector:
    app: prishistorie-postgres
  ports:
    - port: 5432
      targetPort: 5432
