kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prishistorie-api
  namespace: prishistorie
spec:
  selector:
    app: prishistorie-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
